# python-rest-api

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.integration.yaml  docker-compose.yaml  pyproject.toml  skaffold.yaml  yoyo.ini
.github/workflows/: Build-image.yaml  CI.yaml  ci-app.yaml  ci-helm.yaml
.jenkins/: Jenkinsfile  test-and-lint-code  test-and-lint-helm-chart
charts/template/: Chart.yaml  values.yaml
charts/template/templates/: rbac.yaml
docker/: Dockerfile  docker-compose.integration.yaml  docker-compose.yaml
helm/: Chart.yaml  values.yaml
helm/templates/api/: deployment.yaml
helm/templates/db/: deployment.yaml  pre-install-migrations-job.yaml
helm/templates/tests/: test-connection.yaml  test-integration.yaml
python_rest_template/: conftest.py  main.py  main_test.py
python_rest_template/api/: api.py
python_rest_template/api/endpoints/: __init__.py  example.py
python_rest_template/database/: __init__.py  types.py
python_rest_template/database/access_helpers/: __init__.py  helpers.py
python_rest_template/database/db_context/: __init__.py  context.py  context_test.py
python_rest_template/database/execute_sql/: execute_sql.py  execute_sql_test.py
python_rest_template/database/migration/: migrate.py
python_rest_template/database/test_context/: __init__.py  context.py  context_test.py
src/: __init__.py  conftest.py  main.py  main_integration_test.py  main_test.py  types.py
src/api/: api.py
src/api/endpoints/: example.py
src/database/: __init__.py  main_integration_test.py
(+18 files in other folders)
